bug(EJ2-2564): Toolbar popup alignment breaking due to ej2-button changes
bug(EJ2-2564): Toolbar popup alignment breaking due to ej2-button changes

--- a/styles/toolbar/_layout.scss
+++ b/styles/toolbar/_layout.scss
@@ -120,6 +120,7 @@
       .e-toolbar-item  {
 
         .e-tbar-btn.e-btn {
+          display: inline-flex;
           justify-content: flex-start;
 
           .e-icons {
